refactor: change domain